2002-01-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (CMD_ResizeMaximize):
	(CMD_ResizeMoveMaximize):
	fixed ResizeMaximize and ResizeMoveMaximize on pages other than 0 0

2002-01-21  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm2.1:
	s/Penalities/Penalties/g

2002-01-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleLeaveNotify):
	(HandleEnterNotify):
	* fvwm/modconf.c (ModuleConfig):
	* fvwm/update.c (apply_window_updates):
	* fvwm/module_interface.c (BroadcastWindowIconNames):
	(CMD_Send_WindowList):
	(initModules):
	(do_execute_module):
	(PositiveWrite):
	(CMD_set_nograb_mask):
	(CMD_set_sync_mask):
	(CMD_set_mask):
	(set_mseggage_mask):
	(is_message_in_mask):
	(is_message_selected):
	* libs/Module.h:
	rewrote message interface to allow more than 32 messages with minimal
	changes in the existing interfaces.
	new module messages MX_ENTER_WINDOW and MX_LEAVE_WINDOW

	* fvwm/style.h:
	* fvwm/style.c (parse_and_set_window_style):
	* fvwm/fvwm.h (struct):
	* fvwm/events.c (HandleButtonPress):
	implemented new styles MouseFocusClickIgnoreMotion and
	MouseFocusClickIgnoreMotionOff

	* fvwm/focus.c (focus_grab_buttons):
	fixed button mask for > 5 buttons

2002-01-19  olicha  <olivier.chapuis@free.fr>

	* fvwm/ewmh_icons.c (ewmh_SetWmIconFromPixmap):
	Save and restore the icon_pixmap_w and add comments

2002-01-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleEnterNotify):
	fixed EnterNotify events for icons

2002-01-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/*.c:
	* fvwm/stack.c (overlap_box):
	(overlap):
	* fvwm/icons.c (clear_icon):
	* fvwm/add_window.c (destroy_icon):
	* fvwm/fvwm.h (FvwmWindow):
	* fvwm/geometry.c (get_window_borders):
	(get_client_geometry):
	* libs/fvwmrect.h (struct):
	* fvwm/functions.c (expand_extended_var):
	implemented new extended variables cw.x, cw.y, cw.width, cw.height that
	return the geometry of the client window