@@ -69,6 +69,8 @@ Changes in beta release 2.5.0 (not released yet)
 
 * New events "enter_window" and "leave_window" in FvwmEvent.
 
+* New MenuStyle PopupActiveArea.
+
 _+_A NAME="2.4.4"_-_
 Changes in stable release 2.4.4 (16-Dec-2001)
 _+_/A_-_
