@@ -1,3 +1,11 @@
+2002-01-23  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* libs/defaults.h:
+	* fvwm/menus.c (MenuInteraction):
+	(pointer_in_active_item_area):
+	(pointer_in_passive_item_area):
+	new menu style PopupActiveArea
+
 2002-01-22  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/move_resize.c (CMD_ResizeMaximize):
